# duckdb-athena-extension

./: .gitignore  .gitmodules  Cargo.toml  Makefile
.github/workflows/: Linux.yml
src/: athena_scan.rs  lib.rs  table_function.rs  wasm_lib.rs
