[package]
name = "athena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "athena"
crate-type = ["cdylib"]

[profile.release]

[[dev]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "athena"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb_athena_rust = { path = "./duckdb_athena_rust" }
tokio = { version = "1.23.0", features=['full'] }
aws-config = "0.54.1"
aws-sdk-athena = "0.24.0"
aws-sdk-glue = "0.24.0"
lazy_static = "1.4.0"
anyhow = { version = "1.0.68", features = ["backtrace"] }
futures = "0.3"
duckdb = { version = "1.1.1", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.3"
libduckdb-sys = { version = "1.1.1", features = ["loadable-extension"] }


